# mcp

./: .gitignore  README.md  app.py  pyproject.toml  ttyf
mcp_server/: __init__.py  utils.py
mcp_server/enums/: __init__.py  plaid.py
mcp_server/services/: __init__.py
mcp_server/services/keyring/: auth.py  exceptions.py
mcp_server/services/plaid/: __init__.py  client.py
mcp_server/storage/: __init__.py  item.py
mcp_server/tools/: __init__.py  constants.py  get_accounts.py  get_categorized_summary.py  get_category_taxonomy.py  get_current_liabilities.py  get_filtered_transactions.py  get_net_worth.py  get_transactions.py
mcp_server/tools/schemas/: __init__.py  io.py  tools.py  util.py
